# OpenAssetIO-TraitGen

./: .editorconfig  .gitattributes  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/build_openassetio/: action.yml
.github/workflows/: build-wheels.yml  code-quality.yml  deploy-pypi.yml  test.yml
python/openassetio_traitgen/: __init__.py  __main__.py  datamodel.py  parser.py  schema.json
python/openassetio_traitgen/generators/: __init__.py  cpp.py  cpp_keywords.py  helpers.py  python.py
python/openassetio_traitgen/templates/cpp/: package.hpp.in  specification.hpp.in  specifications.hpp.in  trait.hpp.in  traits.hpp.in
python/openassetio_traitgen/templates/python/: specifications.py.in  traits.py.in
resources/codegen/: setup.py
tests/: conftest.py  ctest-requirements.txt  requirements.txt  test___init__.py  test___main__.py  test_parser.py
tests/generators/: test_cpp.py  test_helpers.py  test_python.py
tests/generators/cpp/: .clang-tidy  CMakeLists.txt  CMakePresets.json  conanfile.txt
tests/generators/cpp/cmake/: CompilerWarnings.cmake  DefaultTargetProperties.cmake  StaticAnalyzers.cmake
tests/generators/cpp/src/: CMakeLists.txt  main.cpp  test.cpp
tests/resources/: invalid_values.yaml  minimal.yaml  openassetio-traitgen-test-all.yaml  openassetio-traitgen-test-specifications-only.yaml  openassetio-traitgen-test-traits-only.yaml  parser_load_test.yaml
